--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <ol>
-        <li>apple</li>
-        <li>banana</li>
-    </ol>
-    <br>
-    <ul>
-        <li>orange</li>
-        <li>grape</li>
-    </ul>
+
+    <a href="image.html">image</a>
+    <h1>about:</h1>
+    <form action="">
+        <input type="text">
+        <label for="">Department</label>
+        <input type="text" name="" id="">
+        <label for="">password</label>
+        <input type="password" name="" id="">
+        <input type="checkbox" name="" id="">   
+    </form>>
+        <input type="text" name="q" placeholder="Search Google">
+        <button type="submit">Search</button>
 </body>
 </html>
