--- a/index.html
+++ b/index.html
@@ -10,14 +10,40 @@
     <a href="image.html">image</a>
     <h1>about:</h1>
     <form action="">
-        <input type="text">
-        <label for="">Department</label>
-        <input type="text" name="" id="">
-        <label for="">password</label>
-        <input type="password" name="" id="">
-        <input type="checkbox" name="" id="">   
-    </form>>
-        <input type="text" name="q" placeholder="Search Google">
-        <button type="submit">Search</button>
-</body>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <label for="phone">Phone:</label>
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required>
+        <br>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="" required></textarea>
+        <br>
+        <label for"gender">gender</label>
+        <input type="radio" name="gender" value="male"> Male
+        <input type="radio" name="gender" value="female"> Female<br>
+        
+        <button type="submit">Submit</button>
+    </form>
+    <form>
+
+        <table border="1">
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Message</th>
+            </tr>
+            <tr>
+                <td>John Doe</td>
+                <td>John@gmail.com</td>
+                <td>1234567890</td>
+                <td>Hello, this is a message.</td>
+            </tr>
+        </table>
+    </form>
+    </body>
 </html>
