--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <a href="image.html">image</a>
     <h1>about:</h1>
     <form action="">
@@ -22,7 +22,7 @@
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="" required></textarea>
         <br>
-        <label for"gender">gender</label>
+        <label for="gender">gender</label>
         <input type="radio" name="gender" value="male"> Male
         <input type="radio" name="gender" value="female"> Female<br>
         
